tests/reference/print_generic-t1-658e059.out
Starting main...
Arena created...
Parsing args...
Arg 1: tests/t1.mlir
Arg 2: --no-error-banner
Arg 3: --line=-1
Arg 4: --column=-1
Done parsing args. use_construction=0
Syntax error (6:16): Use of undefined SSA value
	affine.for %i = 0 to 10 {
               ^
